// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cascader can be selected 1`] = `
<div
  class="ant-select-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up ant-cascader-dropdown ant-select-dropdown-placement-bottomLeft"
  style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box; min-width: auto;"
>
  <div>
    <div
      class="ant-cascader-menus"
    >
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
          data-path-key="zhejiang"
          role="menuitemcheckbox"
          title="Zhejiang"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Zhejiang
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
        </li>
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand"
          data-path-key="jiangsu"
          role="menuitemcheckbox"
          title="Jiangsu"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Jiangsu
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
        </li>
      </ul>
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand"
          data-path-key="zhejiang__RC_CASCADER_SPLIT__hangzhou"
          role="menuitemcheckbox"
          title="Hangzhou"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Hangzhou
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader can be selected 2`] = `
<div
  class="ant-select-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up ant-cascader-dropdown ant-select-dropdown-placement-bottomLeft"
  style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box; min-width: auto;"
>
  <div>
    <div
      class="ant-cascader-menus"
    >
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
          data-path-key="zhejiang"
          role="menuitemcheckbox"
          title="Zhejiang"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Zhejiang
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
        </li>
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand"
          data-path-key="jiangsu"
          role="menuitemcheckbox"
          title="Jiangsu"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Jiangsu
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
        </li>
      </ul>
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
          data-path-key="zhejiang__RC_CASCADER_SPLIT__hangzhou"
          role="menuitemcheckbox"
          title="Hangzhou"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Hangzhou
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
        </li>
      </ul>
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item"
          data-path-key="zhejiang__RC_CASCADER_SPLIT__hangzhou__RC_CASCADER_SPLIT__xihu"
          role="menuitemcheckbox"
          title="West Lake"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            West Lake
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader can be selected 3`] = `
<div
  class="ant-select-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up ant-cascader-dropdown ant-select-dropdown-placement-bottomLeft"
  style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box; min-width: auto;"
>
  <div>
    <div
      class="ant-cascader-menus"
    >
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
          data-path-key="zhejiang"
          role="menuitemcheckbox"
          title="Zhejiang"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Zhejiang
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
        </li>
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand"
          data-path-key="jiangsu"
          role="menuitemcheckbox"
          title="Jiangsu"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Jiangsu
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
        </li>
      </ul>
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
          data-path-key="zhejiang__RC_CASCADER_SPLIT__hangzhou"
          role="menuitemcheckbox"
          title="Hangzhou"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Hangzhou
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
        </li>
      </ul>
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="true"
          class="ant-cascader-menu-item ant-cascader-menu-item-active"
          data-path-key="zhejiang__RC_CASCADER_SPLIT__hangzhou__RC_CASCADER_SPLIT__xihu"
          role="menuitemcheckbox"
          title="West Lake"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            West Lake
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader can be selected in RTL direction 1`] = `
<div
  class="ant-select-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up ant-cascader-dropdown ant-cascader-dropdown-rtl ant-select-dropdown-placement-bottomRight"
  style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box; min-width: auto;"
>
  <div>
    <div
      class="ant-cascader-menus ant-cascader-rtl"
    >
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
          data-path-key="zhejiang"
          role="menuitemcheckbox"
          title="Zhejiang"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Zhejiang
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </div>
        </li>
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand"
          data-path-key="jiangsu"
          role="menuitemcheckbox"
          title="Jiangsu"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Jiangsu
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </div>
        </li>
      </ul>
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="true"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand"
          data-path-key="zhejiang__RC_CASCADER_SPLIT__hangzhou"
          role="menuitemcheckbox"
          title="Hangzhou"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Hangzhou
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader can be selected in RTL direction 2`] = `
<div
  class="ant-select-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up ant-cascader-dropdown ant-cascader-dropdown-rtl ant-select-dropdown-placement-bottomRight"
  style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box; min-width: auto;"
>
  <div>
    <div
      class="ant-cascader-menus ant-cascader-rtl"
    >
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
          data-path-key="zhejiang"
          role="menuitemcheckbox"
          title="Zhejiang"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Zhejiang
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </div>
        </li>
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand"
          data-path-key="jiangsu"
          role="menuitemcheckbox"
          title="Jiangsu"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Jiangsu
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </div>
        </li>
      </ul>
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="true"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
          data-path-key="zhejiang__RC_CASCADER_SPLIT__hangzhou"
          role="menuitemcheckbox"
          title="Hangzhou"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Hangzhou
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </div>
        </li>
      </ul>
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item"
          data-path-key="zhejiang__RC_CASCADER_SPLIT__hangzhou__RC_CASCADER_SPLIT__xihu"
          role="menuitemcheckbox"
          title="West Lake"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            West Lake
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader can be selected in RTL direction 3`] = `
<div
  class="ant-select-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up ant-cascader-dropdown ant-cascader-dropdown-rtl ant-select-dropdown-placement-bottomRight"
  style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box; min-width: auto;"
>
  <div>
    <div
      class="ant-cascader-menus ant-cascader-rtl"
    >
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
          data-path-key="zhejiang"
          role="menuitemcheckbox"
          title="Zhejiang"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Zhejiang
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </div>
        </li>
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand"
          data-path-key="jiangsu"
          role="menuitemcheckbox"
          title="Jiangsu"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Jiangsu
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </div>
        </li>
      </ul>
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
          data-path-key="zhejiang__RC_CASCADER_SPLIT__hangzhou"
          role="menuitemcheckbox"
          title="Hangzhou"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Hangzhou
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </div>
        </li>
      </ul>
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="true"
          class="ant-cascader-menu-item ant-cascader-menu-item-active"
          data-path-key="zhejiang__RC_CASCADER_SPLIT__hangzhou__RC_CASCADER_SPLIT__xihu"
          role="menuitemcheckbox"
          title="West Lake"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            West Lake
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader legacy props should support showCheckedStrategy child 1`] = `
<div
  class="ant-select ant-cascader ant-select-multiple ant-select-allow-clear ant-select-show-arrow ant-select-open"
>
  <div
    class="ant-select-selector"
  >
    <div
      class="ant-select-selection-overflow"
    >
      <div
        class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
        style="opacity: 1;"
      >
        <div
          class="ant-select-selection-search"
          style="width: 0px;"
        >
          <input
            aria-autocomplete="list"
            aria-controls="rc_select_TEST_OR_SSR_list"
            aria-expanded="true"
            aria-haspopup="listbox"
            aria-owns="rc_select_TEST_OR_SSR_list"
            autocomplete="off"
            class="ant-select-selection-search-input"
            id="rc_select_TEST_OR_SSR"
            readonly=""
            role="combobox"
            style="opacity: 0;"
            type="search"
            unselectable="on"
            value=""
          />
          <span
            aria-hidden="true"
            class="ant-select-selection-search-mirror"
          >
          </span>
        </div>
      </div>
    </div>
    <span
      class="ant-select-selection-placeholder"
    />
  </div>
  <div
    class="ant-select-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up ant-cascader-dropdown ant-select-dropdown-placement-bottomLeft"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box; min-width: auto;"
  >
    <div>
      <div
        class="ant-cascader-menus"
      >
        <ul
          class="ant-cascader-menu"
          role="menu"
        >
          <li
            aria-checked="false"
            class="ant-cascader-menu-item ant-cascader-menu-item-expand"
            data-path-key="zhejiang"
            role="menuitemcheckbox"
            title="Zhejiang"
          >
            <span
              class="ant-cascader-checkbox"
            >
              <span
                class="ant-cascader-checkbox-inner"
              />
            </span>
            <div
              class="ant-cascader-menu-item-content"
            >
              Zhejiang
            </div>
            <div
              class="ant-cascader-menu-item-expand-icon"
            >
              <span
                aria-label="right"
                class="anticon anticon-right"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="right"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                  />
                </svg>
              </span>
            </div>
          </li>
          <li
            aria-checked="false"
            class="ant-cascader-menu-item ant-cascader-menu-item-expand"
            data-path-key="jiangsu"
            role="menuitemcheckbox"
            title="Jiangsu"
          >
            <span
              class="ant-cascader-checkbox"
            >
              <span
                class="ant-cascader-checkbox-inner"
              />
            </span>
            <div
              class="ant-cascader-menu-item-content"
            >
              Jiangsu
            </div>
            <div
              class="ant-cascader-menu-item-expand-icon"
            >
              <span
                aria-label="right"
                class="anticon anticon-right"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="right"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                  />
                </svg>
              </span>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <span
    aria-hidden="true"
    class="ant-select-arrow"
    style="user-select: none;"
    unselectable="on"
  >
    <span
      aria-label="down"
      class="anticon anticon-down ant-select-suffix"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="down"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`Cascader legacy props should support showCheckedStrategy parent 1`] = `
<div
  class="ant-select ant-cascader ant-select-multiple ant-select-allow-clear ant-select-show-arrow ant-select-open"
>
  <div
    class="ant-select-selector"
  >
    <div
      class="ant-select-selection-overflow"
    >
      <div
        class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
        style="opacity: 1;"
      >
        <div
          class="ant-select-selection-search"
          style="width: 0px;"
        >
          <input
            aria-autocomplete="list"
            aria-controls="rc_select_TEST_OR_SSR_list"
            aria-expanded="true"
            aria-haspopup="listbox"
            aria-owns="rc_select_TEST_OR_SSR_list"
            autocomplete="off"
            class="ant-select-selection-search-input"
            id="rc_select_TEST_OR_SSR"
            readonly=""
            role="combobox"
            style="opacity: 0;"
            type="search"
            unselectable="on"
            value=""
          />
          <span
            aria-hidden="true"
            class="ant-select-selection-search-mirror"
          >
          </span>
        </div>
      </div>
    </div>
    <span
      class="ant-select-selection-placeholder"
    />
  </div>
  <div
    class="ant-select-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up ant-cascader-dropdown ant-select-dropdown-placement-bottomLeft"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box; min-width: auto;"
  >
    <div>
      <div
        class="ant-cascader-menus"
      >
        <ul
          class="ant-cascader-menu"
          role="menu"
        >
          <li
            aria-checked="false"
            class="ant-cascader-menu-item ant-cascader-menu-item-expand"
            data-path-key="zhejiang"
            role="menuitemcheckbox"
            title="Zhejiang"
          >
            <span
              class="ant-cascader-checkbox"
            >
              <span
                class="ant-cascader-checkbox-inner"
              />
            </span>
            <div
              class="ant-cascader-menu-item-content"
            >
              Zhejiang
            </div>
            <div
              class="ant-cascader-menu-item-expand-icon"
            >
              <span
                aria-label="right"
                class="anticon anticon-right"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="right"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                  />
                </svg>
              </span>
            </div>
          </li>
          <li
            aria-checked="false"
            class="ant-cascader-menu-item ant-cascader-menu-item-expand"
            data-path-key="jiangsu"
            role="menuitemcheckbox"
            title="Jiangsu"
          >
            <span
              class="ant-cascader-checkbox"
            >
              <span
                class="ant-cascader-checkbox-inner"
              />
            </span>
            <div
              class="ant-cascader-menu-item-content"
            >
              Jiangsu
            </div>
            <div
              class="ant-cascader-menu-item-expand-icon"
            >
              <span
                aria-label="right"
                class="anticon anticon-right"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="right"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                  />
                </svg>
              </span>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <span
    aria-hidden="true"
    class="ant-select-arrow"
    style="user-select: none;"
    unselectable="on"
  >
    <span
      aria-label="down"
      class="anticon anticon-down ant-select-suffix"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="down"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`Cascader popup correctly with defaultValue 1`] = `
<div
  class="ant-select-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up ant-cascader-dropdown ant-select-dropdown-placement-bottomLeft"
  style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box; min-width: auto;"
>
  <div>
    <div
      class="ant-cascader-menus"
    >
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
          data-path-key="zhejiang"
          role="menuitemcheckbox"
          title="Zhejiang"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Zhejiang
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
        </li>
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand"
          data-path-key="jiangsu"
          role="menuitemcheckbox"
          title="Jiangsu"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Jiangsu
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
        </li>
      </ul>
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="true"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
          data-path-key="zhejiang__RC_CASCADER_SPLIT__hangzhou"
          role="menuitemcheckbox"
          title="Hangzhou"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Hangzhou
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
        </li>
      </ul>
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item"
          data-path-key="zhejiang__RC_CASCADER_SPLIT__hangzhou__RC_CASCADER_SPLIT__xihu"
          role="menuitemcheckbox"
          title="West Lake"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            West Lake
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader popup correctly with defaultValue RTL 1`] = `
<div
  class="ant-select ant-cascader ant-select-rtl ant-select-single ant-select-allow-clear ant-select-show-arrow ant-select-open"
>
  <div
    class="ant-select-selector"
  >
    <span
      class="ant-select-selection-search"
    >
      <input
        aria-autocomplete="list"
        aria-controls="rc_select_TEST_OR_SSR_list"
        aria-expanded="true"
        aria-haspopup="listbox"
        aria-owns="rc_select_TEST_OR_SSR_list"
        autocomplete="off"
        class="ant-select-selection-search-input"
        id="rc_select_TEST_OR_SSR"
        readonly=""
        role="combobox"
        style="opacity: 0;"
        type="search"
        unselectable="on"
        value=""
      />
    </span>
    <span
      class="ant-select-selection-item"
      title="Zhejiang / Hangzhou"
    >
      Zhejiang / Hangzhou
    </span>
  </div>
  <div
    class="ant-select-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up ant-cascader-dropdown ant-cascader-dropdown-rtl ant-select-dropdown-placement-bottomRight"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box; min-width: auto;"
  >
    <div>
      <div
        class="ant-cascader-menus ant-cascader-rtl"
      >
        <ul
          class="ant-cascader-menu"
          role="menu"
        >
          <li
            aria-checked="false"
            class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
            data-path-key="zhejiang"
            role="menuitemcheckbox"
            title="Zhejiang"
          >
            <div
              class="ant-cascader-menu-item-content"
            >
              Zhejiang
            </div>
            <div
              class="ant-cascader-menu-item-expand-icon"
            >
              <span
                aria-label="left"
                class="anticon anticon-left"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="left"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                  />
                </svg>
              </span>
            </div>
          </li>
          <li
            aria-checked="false"
            class="ant-cascader-menu-item ant-cascader-menu-item-expand"
            data-path-key="jiangsu"
            role="menuitemcheckbox"
            title="Jiangsu"
          >
            <div
              class="ant-cascader-menu-item-content"
            >
              Jiangsu
            </div>
            <div
              class="ant-cascader-menu-item-expand-icon"
            >
              <span
                aria-label="left"
                class="anticon anticon-left"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="left"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                  />
                </svg>
              </span>
            </div>
          </li>
        </ul>
        <ul
          class="ant-cascader-menu"
          role="menu"
        >
          <li
            aria-checked="true"
            class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
            data-path-key="zhejiang__RC_CASCADER_SPLIT__hangzhou"
            role="menuitemcheckbox"
            title="Hangzhou"
          >
            <div
              class="ant-cascader-menu-item-content"
            >
              Hangzhou
            </div>
            <div
              class="ant-cascader-menu-item-expand-icon"
            >
              <span
                aria-label="left"
                class="anticon anticon-left"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="left"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                  />
                </svg>
              </span>
            </div>
          </li>
        </ul>
        <ul
          class="ant-cascader-menu"
          role="menu"
        >
          <li
            aria-checked="false"
            class="ant-cascader-menu-item"
            data-path-key="zhejiang__RC_CASCADER_SPLIT__hangzhou__RC_CASCADER_SPLIT__xihu"
            role="menuitemcheckbox"
            title="West Lake"
          >
            <div
              class="ant-cascader-menu-item-content"
            >
              West Lake
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <span
    aria-hidden="true"
    class="ant-select-arrow"
    style="user-select: none;"
    unselectable="on"
  >
    <span
      aria-label="down"
      class="anticon anticon-down ant-select-suffix"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="down"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
        />
      </svg>
    </span>
  </span>
  <span
    aria-hidden="true"
    class="ant-select-clear"
    style="user-select: none;"
    unselectable="on"
  >
    <span
      aria-label="close-circle"
      class="anticon anticon-close-circle"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="close-circle"
        fill="currentColor"
        fill-rule="evenodd"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`Cascader rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class="ant-select ant-cascader ant-select-rtl ant-select-single ant-select-allow-clear ant-select-show-arrow"
>
  <div
    class="ant-select-selector"
  >
    <span
      class="ant-select-selection-search"
    >
      <input
        aria-autocomplete="list"
        aria-controls="rc_select_TEST_OR_SSR_list"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="rc_select_TEST_OR_SSR_list"
        autocomplete="off"
        class="ant-select-selection-search-input"
        id="rc_select_TEST_OR_SSR"
        readonly=""
        role="combobox"
        style="opacity: 0;"
        type="search"
        unselectable="on"
        value=""
      />
    </span>
    <span
      class="ant-select-selection-placeholder"
    />
  </div>
  <span
    aria-hidden="true"
    class="ant-select-arrow"
    style="user-select: none;"
    unselectable="on"
  >
    <span
      aria-label="down"
      class="anticon anticon-down ant-select-suffix"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="down"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`Cascader should highlight keyword and filter when search in Cascader 1`] = `"<div><div class="ant-cascader-menus"><ul class="ant-cascader-menu" role="menu"><li class="ant-cascader-menu-item" role="menuitemcheckbox" aria-checked="false" data-path-key="zhejiang__RC_CASCADER_SPLIT__hangzhou__RC_CASCADER_SPLIT__xihu"><div class="ant-cascader-menu-item-content"><span class="ant-cascader-menu-item-keyword">Z</span>hejiang / Hang<span class="ant-cascader-menu-item-keyword">z</span>hou / West Lake</div></li><li class="ant-cascader-menu-item" role="menuitemcheckbox" aria-checked="false" data-path-key="jiangsu__RC_CASCADER_SPLIT__nanjing__RC_CASCADER_SPLIT__zhonghuamen"><div class="ant-cascader-menu-item-content">Jiangsu / Nanjing / <span class="ant-cascader-menu-item-keyword">Z</span>hong Hua Men</div></li></ul></div></div>"`;

exports[`Cascader should highlight keyword and filter when search in Cascader with same field name of label and value 1`] = `"<div><div class="ant-cascader-menus"><ul class="ant-cascader-menu" role="menu"><li class="ant-cascader-menu-item" role="menuitemcheckbox" aria-checked="false" data-path-key="Zhejiang__RC_CASCADER_SPLIT__Hangzhou__RC_CASCADER_SPLIT__West Lake"><div class="ant-cascader-menu-item-content"><span class="ant-cascader-menu-item-keyword">Z</span>hejiang / Hang<span class="ant-cascader-menu-item-keyword">z</span>hou / West Lake</div></li><li class="ant-cascader-menu-item ant-cascader-menu-item-disabled" role="menuitemcheckbox" aria-checked="false" data-path-key="Zhejiang__RC_CASCADER_SPLIT__Hangzhou__RC_CASCADER_SPLIT__Xia Sha"><div class="ant-cascader-menu-item-content"><span class="ant-cascader-menu-item-keyword">Z</span>hejiang / Hang<span class="ant-cascader-menu-item-keyword">z</span>hou / Xia Sha</div></li></ul></div></div>"`;

exports[`Cascader should render not found content 1`] = `
<div
  class="ant-select-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up ant-cascader-dropdown ant-select-dropdown-empty ant-select-dropdown-placement-bottomLeft"
  style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
>
  <div>
    <div
      class="ant-cascader-menus ant-cascader-menu-empty"
    >
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-disabled"
          data-path-key="__EMPTY__"
          role="menuitemcheckbox"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            <div
              class="ant-empty ant-empty-normal ant-empty-small"
            >
              <div
                class="ant-empty-image"
              >
                <svg
                  height="41"
                  viewBox="0 0 64 41"
                  width="64"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="none"
                    fill-rule="evenodd"
                    transform="translate(0 1)"
                  >
                    <ellipse
                      cx="32"
                      cy="33"
                      fill="#f5f5f5"
                      rx="32"
                      ry="7"
                    />
                    <g
                      fill-rule="nonzero"
                      stroke="#d9d9d9"
                    >
                      <path
                        d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                      />
                      <path
                        d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                        fill="#fafafa"
                      />
                    </g>
                  </g>
                </svg>
              </div>
              <div
                class="ant-empty-description"
              >
                No data
              </div>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader should show not found content when options.length is 0 1`] = `
<div
  class="ant-select-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up ant-cascader-dropdown ant-select-dropdown-empty ant-select-dropdown-placement-bottomLeft"
  style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
>
  <div>
    <div
      class="ant-cascader-menus ant-cascader-menu-empty"
    >
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-disabled"
          data-path-key="__EMPTY__"
          role="menuitemcheckbox"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            <div
              class="ant-empty ant-empty-normal ant-empty-small"
            >
              <div
                class="ant-empty-image"
              >
                <svg
                  height="41"
                  viewBox="0 0 64 41"
                  width="64"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="none"
                    fill-rule="evenodd"
                    transform="translate(0 1)"
                  >
                    <ellipse
                      cx="32"
                      cy="33"
                      fill="#f5f5f5"
                      rx="32"
                      ry="7"
                    />
                    <g
                      fill-rule="nonzero"
                      stroke="#d9d9d9"
                    >
                      <path
                        d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                      />
                      <path
                        d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                        fill="#fafafa"
                      />
                    </g>
                  </g>
                </svg>
              </div>
              <div
                class="ant-empty-description"
              >
                No data
              </div>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader support controlled mode 1`] = `
<div
  class="ant-select ant-cascader ant-select-single ant-select-allow-clear ant-select-show-arrow"
>
  <div
    class="ant-select-selector"
  >
    <span
      class="ant-select-selection-search"
    >
      <input
        aria-autocomplete="list"
        aria-controls="rc_select_TEST_OR_SSR_list"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="rc_select_TEST_OR_SSR_list"
        autocomplete="off"
        class="ant-select-selection-search-input"
        id="rc_select_TEST_OR_SSR"
        readonly=""
        role="combobox"
        style="opacity: 0;"
        type="search"
        unselectable="on"
        value=""
      />
    </span>
    <span
      class="ant-select-selection-item"
      title="Zhejiang / Hangzhou / West Lake"
    >
      Zhejiang / Hangzhou / West Lake
    </span>
  </div>
  <span
    aria-hidden="true"
    class="ant-select-arrow"
    style="user-select: none;"
    unselectable="on"
  >
    <span
      aria-label="down"
      class="anticon anticon-down ant-select-suffix"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="down"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
        />
      </svg>
    </span>
  </span>
  <span
    aria-hidden="true"
    class="ant-select-clear"
    style="user-select: none;"
    unselectable="on"
  >
    <span
      aria-label="close-circle"
      class="anticon anticon-close-circle"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="close-circle"
        fill="currentColor"
        fill-rule="evenodd"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
        />
      </svg>
    </span>
  </span>
</div>
`;
